# lifegraph-json

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  PARITY_REPORT.md  README.md  SETUP.md
.githooks/: post-merge  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  miri.yml  release.yml
benches/: comparison.rs  json_ops.rs  unified.rs
docs/: API_COMPARISON.md  API_PARITY_REPORT.md  BRANCH_PROTECTION.md  COMPATIBILITY_GUIDE.md  FUZZING.md  MIRI.md  QUICK_REFERENCE.md  SERDE_FEATURE.md  TEST_IMPROVEMENTS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  roundtrip.rs  tape.rs
scripts/: compat_report.sh  fuzz.sh  miri.sh  release.sh  setup.sh
src/: borrowed_value.rs  error.rs  index.rs  json_macro.rs  lib.rs  map.rs  number.rs  parse.rs  partial_eq.rs  raw.rs  serde_api.rs  serde_deserialize.rs  serde_error.rs  serde_serialize.rs  serde_streaming_serialize.rs  tape.rs  util.rs  value.rs
tests/: api_parity_probe.rs  behavioral_parity.rs  depth_debug.rs  depth_file.rs  depth_small.rs  depth_test.rs  error_position_tests.rs  from_str_typed.rs  from_value.rs  json_test_suite.rs  serde_json_comparison.rs  serde_map_test.rs  to_string_typed.rs  unicode.rs
