[package]
name = "lifegraph-json"
version = "1.0.149"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A zero-dependency JSON crate with owned, borrowed, tape, and compiled-schema fast paths"
readme = "README.md"
repository = "https://github.com/Sylchi/lifegraph-json"
homepage = "https://github.com/Sylchi/lifegraph-json"
keywords = ["json", "parser", "serializer", "zero-copy", "tape"]
categories = ["encoding", "parser-implementations"]
rust-version = "1.70"

[features]
default = ["std"]
std = []
alloc = []
indexmap = []
raw_value = ["serde"]
preserve_order = ["indexmap"]
serde = ["dep:serde_crate"]
# Compatibility testing feature - allows using this crate as serde_json drop-in
compat_test = []
# Enable serde_json comparison benchmarks (pulls in serde_json from crates.io)
serde_json_bench = ["dep:serde_json_upstream"]

[dependencies]
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json_upstream = { package = "serde_json", version = "1", optional = true }
schemars = { version = "0.8", optional = true }
ts-rs = { version = "11", optional = true }

[dev-dependencies]
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_bytes = "0.11"

[[bench]]
name = "json_ops"

[[bench]]
name = "comparison"
required-features = ["serde_json_bench"]
